--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,9 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".SignUpActivity">
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".SignInActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="73dp">
+
+
+        <TextView
+            android:id="@+id/mainsignup"
+            style="@style/main_title"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:text="@string/nursik_main_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <ImageView
+            android:id="@+id/iv_app_icon"
+            android:layout_width="140dp"
+            android:layout_height="144dp"
+            android:layout_marginTop="20dp"
+            app:srcCompat="@drawable/app_logo"
+            tools:layout_editor_absoluteX="97dp"
+            tools:layout_editor_absoluteY="86dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:orientation="vertical"
+            android:gravity="center"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <EditText
+                android:id="@+id/et_account_full_name"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/textview_border"
+                android:hint="@string/hint_full_name"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
+                android:paddingHorizontal="15dp" />
+
+            <EditText
+
+                android:id="@+id/et_account_email"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/textview_border"
+                android:hint="@string/hint_email"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
+                android:paddingHorizontal="15dp" />
+
+            <EditText
+                android:id="@+id/et_email_address"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/textview_border"
+                android:hint="@string/hint_emergency_phone"
+                android:imeOptions="actionNext"
+                android:inputType="text|textPhonetic"
+                android:paddingHorizontal="15dp" />
+
+            <EditText
+
+                android:id="@+id/et_account_password"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/textview_border"
+                android:hint="@string/enter_password"
+                android:imeOptions="actionNext"
+                android:inputType="textPassword"
+                android:paddingHorizontal="15dp" />
+
+            <EditText
+
+                android:id="@+id/et_account_confirm_password"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/textview_border"
+                android:hint="@string/confirm_password"
+                android:imeOptions="actionNext"
+                android:inputType="textPassword"
+                android:paddingHorizontal="15dp" />
+
+            <Button
+                android:id="@+id/btn_create_account"
+                style="@style/text_for_buttons"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="0dp"
+                android:gravity="center"
+                android:text="@string/create_account"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteX="300dp"
+                tools:layout_editor_absoluteY="596dp" />
+        </LinearLayout>
+
+
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
